# TimerBenchmark

./: CMakeLists.txt  README.md  benchmark.hpp  benchmark_map.cpp  benchmark_slot_map.cpp  benchmark_unordered_map.cpp  benchmark_vector_erase_if.cpp  benchmark_vector_swap.cpp  run.sh
reports/: results_map.json  results_slot_map.json  results_slot_map_resized.json  results_unordered_map.json  results_vector_erase_if.json  results_vector_swap.json
